# onsite-practice

./: README.md  pyproject.toml
src/circuit_utils/: __init__.py  circuit.py  gates.py  parsing.py
tests/: conftest.py  test_circuit.py  test_gates.py  test_parsing.py
