[project]
name = "circuit-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daiwei", email = "zhu@ionq.co" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipytest>=0.14.2",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "ty>=0.0.38",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: long-running tests",
    "integration: requires IonQ API",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
